Fixed gap between video containers

--- a/css/style.css
+++ b/css/style.css
@@ -453,22 +453,24 @@ p, .nav-links, button {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 5%;
 }
-.flexbox-container {
-    padding: 2% 2%;    
+.flexbox-container {      
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    flex-grow: 1;
+    height: auto;
+    min-width: 400px;
+    padding: 2% 2%;  
+
     background: rgba(255, 255, 255, 0.05);
     box-shadow: 0px 0px 50px rgba(255, 255, 255, 0.05); 
     backdrop-filter: blur( 2px );
     -webkit-backdrop-filter: blur( 2px );
     border: 1px solid rgba( 255, 255, 255, 0.18 );
-    border-radius: 25px;      
-    height: auto;
-    min-width: 400px;
-    max-width: 550px;
-    flex-grow: 1;
+    border-radius: 25px;         
+    
     transition: 0.5s;  
 }
 .flexbox-container:hover, .ux-flexbox-container:hover {
